// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Cta variant with icon renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--cta ecl-link--icon"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Call to action link
    </span>
    <span
      class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
    />
  </a>
</jest>
`;

exports[`Link Default renders correctly 1`] = `
<jest>
  <a
    class="ecl-link"
    href="/example"
  >
    The European Union
  </a>
</jest>
`;

exports[`Link External renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link
    </span>
    <span
      class="wt-icon--external ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon--external"
      data-title="Links to an external url"
      role="img"
    />
  </a>
</jest>
`;

exports[`Link Standalone renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone"
    href="/example"
  >
    Standalone link
  </a>
</jest>
`;

exports[`Link Standalone with missing icon name renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone"
    href="/example"
  >
    Standalone link with icon
  </a>
</jest>
`;

exports[`Link With icon after renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class ecl-icon--external"
    />
  </a>
</jest>
`;

exports[`Link With icon after renders correctly with extra attributes 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class ecl-icon--external"
    />
  </a>
</jest>
`;

exports[`Link With icon after renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon custom-class custom-class--test"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class ecl-icon--external"
    />
  </a>
</jest>
`;

exports[`Link With icon before renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    href="/example"
  >
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class ecl-icon--external"
    />
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</jest>
`;

exports[`Link With two icons after renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--external"
    />
    <span
      class="wt-icon--download ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--download"
    />
  </a>
</jest>
`;

exports[`Link With two icons after renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone custom-class custom-class--test"
    href="/example"
  >
    Standalone link
  </a>
</jest>
`;

exports[`Link With two icons before renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon"
    href="/example"
  >
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--external"
    />
    <span
      class="wt-icon--download ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--download"
    />
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</jest>
`;

exports[`Link With two icons before renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon custom-class custom-class--test"
    href="/example"
  >
    <span
      class="wt-icon--external ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--external"
    />
    <span
      class="wt-icon--download ecl-icon ecl-icon--fluid ecl-link__icon ecl-icon--download"
    />
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</jest>
`;

exports[`Link with indicator renders correctly 1`] = `
<jest>
  <a
    class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-only"
    href="/example"
  >
    <span
      class="ecl-link__label"
    >
      Call to action link
    </span>
    <span
      class="ecl-link__icon-container"
    >
      <span
        class="wt-icon--corner-arrow ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
      />
      <span
        class="ecl-indicator"
        data-ecl-auto-init="Indicator"
        data-ecl-indicator=""
      >
        10
      </span>
    </span>
  </a>
</jest>
`;
